// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен вернуть корректный компонент 1`] = `
<DashboardWidget>
  <DashboardWidgetHeader
    conversion={
      Object {
        "tooltip": "Как часто пользователи, просматривающие объявления, смотрят номер телефона",
        "value": 0,
      }
    }
    title="Просмотры телефонов"
    total="123"
  />
  <DashboardWidgetLineChart
    animation={true}
    backgroundColor="#DEF1FB"
    borderColor="#92D1F0"
    chartData={
      Array [
        Object {
          "t": "2019-09-03",
          "y": 92,
        },
        Object {
          "t": "2019-09-04",
          "y": 55,
        },
        Object {
          "t": "2019-09-05",
          "y": 80,
        },
        Object {
          "t": "2019-09-06",
          "y": 63,
        },
        Object {
          "t": "2019-09-07",
          "y": 68,
        },
        Object {
          "t": "2019-09-08",
          "y": 56,
        },
        Object {
          "t": "2019-09-09",
          "y": 14,
        },
        Object {
          "t": "2019-09-10",
          "y": 44,
        },
        Object {
          "t": "2019-09-11",
          "y": 72,
        },
        Object {
          "t": "2019-09-12",
          "y": 72,
        },
        Object {
          "t": "2019-09-13",
          "y": 58,
        },
        Object {
          "t": "2019-09-14",
          "y": 70,
        },
        Object {
          "t": "2019-09-15",
          "y": 53,
        },
        Object {
          "t": "2019-09-16",
          "y": 95,
        },
        Object {
          "t": "2019-09-17",
          "y": 64,
        },
        Object {
          "t": "2019-09-18",
          "y": 52,
        },
        Object {
          "t": "2019-09-19",
          "y": 59,
        },
        Object {
          "t": "2019-09-20",
          "y": 61,
        },
        Object {
          "t": "2019-09-21",
          "y": 43,
        },
        Object {
          "t": "2019-09-22",
          "y": 67,
        },
        Object {
          "t": "2019-09-23",
          "y": 62,
        },
        Object {
          "t": "2019-09-24",
          "y": 61,
        },
        Object {
          "t": "2019-09-25",
          "y": 63,
        },
        Object {
          "t": "2019-09-26",
          "y": 73,
        },
        Object {
          "t": "2019-09-27",
          "y": 61,
        },
        Object {
          "t": "2019-09-28",
          "y": 77,
        },
        Object {
          "t": "2019-09-29",
          "y": 40,
        },
        Object {
          "t": "2019-09-30",
          "y": 76,
        },
        Object {
          "t": "2019-10-01",
          "y": 66,
        },
        Object {
          "t": "2019-10-02",
          "y": 0,
        },
        Object {
          "t": "2019-10-03",
          "y": 0,
        },
      ]
    }
    className="DashboardPhoneShowWidget__chart"
    height={175}
    margin={
      Object {
        "bottom": 0,
        "left": 20,
        "right": 30,
        "top": 20,
      }
    }
    showAxis={true}
    showTooltip={true}
    thickness={4}
    width={372}
  />
  <DashboardWidgetStatistic
    className="DashboardPhoneShowWidget__statistic"
    compareData={
      Object {
        "daily": Object {
          "last": 0,
          "prev": 0,
        },
        "monthly": Object {
          "last": 1725,
          "prev": 1817,
        },
        "weekly": Object {
          "last": 320,
          "prev": 430,
        },
      }
    }
  />
</DashboardWidget>
`;

exports[`должен вернуть корретный компонент, если !hasStats 1`] = `
<DashboardWidget>
  <DashboardWidgetHeader
    title="Просмотры телефонов"
  />
  <DashboardWidgetAlert
    message="После добавления объявлений здесь будет отображаться статистика просмотров объявлений и контактный данных."
  />
</DashboardWidget>
`;

exports[`должен вернуть корретный компонент, если hasOffers и !hasStats 1`] = `
<DashboardWidget>
  <DashboardWidgetHeader
    title="Просмотры телефонов"
  />
  <DashboardWidgetAlert
    hasIcon={true}
    message="Пользователи ни разу не посмотрели телефон на объявлениях"
  />
</DashboardWidget>
`;
